# Profkom-Web-App

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  package-lock.json
backend/: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/application/: .env.template  entrypoint.sh  main.py
backend/application/alembic/: env.py
backend/application/alembic/versions/: 2025_04_08_1706-9ca10c4d8323_users_table_first_migration.py  2025_04_08_1740-eaf843efe068_create_access_tokens_table.py  2025_04_08_2219-b883a16e9d01_create_users_table.py  2025_04_08_2221-c0b80599cb07_create_access_tokens_table.py  2025_04_09_1226-689029ae2656_create_users_table.py  2025_04_09_1228-481b591f1d0f_create_access_tokens_table.py  2025_04_09_1239-90ed01ec2405_create_groups_table.py  2025_04_09_1320-0e98bb5af4d2_create_groups_table.py  2025_04_10_1114-54fa68773b31_create_plan_items_table.py  2025_04_10_1522-a64c2145c937_create_profkom_events_table.py  2025_04_10_1754-ed308d650d24_create_notes_table.py
backend/application/api/crud/: access_token.py  group.py  note.py  plan_item.py  profkom_event.py
backend/application/api/dependencies/: access_tokens.py  auth_backend.py  strategy.py  users.py
backend/application/api/handlers/: __init__.py  auth.py  chat.py  dependencies.py  group.py  note.py  plan_item.py  profkom_event.py  token.py  user.py
backend/application/core/: config.py
backend/application/core/authentication/: __init__.py  transport.py  user_manager.py
backend/application/scripts/: chat.py  create_superuser.py  groupmaker.py
(+123 files in other folders)
